--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -7,15 +7,4 @@ footer.footer.p-10.bg-base-200.text-base-content
   div
     span.footer-title
       = t('menu.list')
-    = link_to t('menu.store'), stores_path, class: "link link-hover"
-    = link_to t('menu.brand'), brands_path, class: "link link-hover"
-    = link_to t('menu.product'), products_path, class: "link link-hover"
-    = link_to t('menu.item'), items_path, class: "link link-hover"
-    = link_to t('menu.report'), reports_path, class: "link link-hover"
-
-  div
-    span.footer-title
-      = link_to t('menu.static_pages.info'), static_pages_info_path, class: "link link-hover"
-    = link_to t('menu.static_pages.privacy'), static_pages_privacy_path, class: "link link-hover"
-    = link_to t('menu.static_pages.terms'), static_pages_terms_path, class: "link link-hover"
-    = link_to t('menu.static_pages.faq'), static_pages_faq_path, class: "link link-hover"
+    = link_to t('menu.user'), users_path, class: "link link-hover"
