--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -7,6 +7,8 @@ header
           ul.p-2.bg-base-100
             li
               = link_to t('menu.user'), users_path, class: "link link-hover"
+            li
+              = link_to t('menu.card'), cards_path, class: "link link-hover"
         - if login?
           li tabindex="0"
             = link_to '#', class: "link link-hover py-0"
@@ -33,6 +35,8 @@ header
               ul.p-2.bg-base-100
                 li
                   = link_to t('menu.user'), users_path, class: "link link-hover"
+                li
+                  = link_to t('menu.card'), cards_path, class: "link link-hover"
             - if login?
               li
                 = link_to "#{current_user.display_name}さん", class: "link"
