--- a/app/views/cards/index.html.slim
+++ b/app/views/cards/index.html.slim
@@ -5,7 +5,10 @@ h1 Cards
 #cards
   - @cards.each do |card|
     == render card
-    p
-      = link_to "Show this card", card
+    .flex.flex-row.p-2
+      .p-1
+        = link_to t('btn.edit'), edit_card_path(card), class: "btn btn-primary rounded-md"
+      .p-1
+        = button_to t('btn.destroy'), card, method: :delete, form: { data: { turbo_confirm: t('confirm.destroy') } }, class: "btn btn-warning rounded-md"
 
-= link_to "New card", new_card_path
+= link_to t('btn.new'), new_card_path
