--- a/app/views/cards/show.html.slim
+++ b/app/views/cards/show.html.slim
@@ -3,11 +3,13 @@ p style="color: green" = notice
 == render @card
 
 .flex.flex-row.p-2
-  .p-1
-    = link_to t('btn.edit'), edit_card_path(@card), class: "btn btn-primary rounded-md"
+  - if policy(@card).edit?
+    .p-1
+      = link_to t('btn.edit'), edit_card_path(@card), class: "btn btn-primary rounded-md"
   .p-1
     = link_to t('btn.back'), cards_path, class: "btn btn-secondary rounded-md"
-  .p-1
-    = button_to t('btn.destroy'), @card, method: :delete, form: { data: { turbo_confirm: t('confirm.destroy') } }, class: "btn btn-warning rounded-md"
+  - if policy(@card).destroy?
+    .p-1
+      = button_to t('btn.destroy'), @card, method: :delete, form: { data: { turbo_confirm: t('confirm.destroy') } }, class: "btn btn-warning rounded-md"
   .p-1
     = link_to t('btn.new_message'), new_message_path(card_id: @card.id), class: "btn btn-primary rounded-md"
