--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -8,7 +8,9 @@ h1 Messages
     .flex.flex-row.p-2
       .p-1
         = link_to t('btn.show'), message, class: "btn btn-primary rounded-md"
-      .p-1
-        = link_to t('btn.edit'), edit_message_path(message), class: "btn btn-primary rounded-md"
-      .p-1
-        = button_to t('btn.destroy'), message, method: :delete, form: { data: { turbo_confirm: t('confirm.destroy') } }, class: "btn btn-warning rounded-md"
+      - if policy(message).edit?
+        .p-1
+          = link_to t('btn.edit'), edit_message_path(message), class: "btn btn-primary rounded-md"
+      - if policy(message).destroy?
+        .p-1
+          = button_to t('btn.destroy'), message, method: :delete, form: { data: { turbo_confirm: t('confirm.destroy') } }, class: "btn btn-warning rounded-md"
