レイアウト改善する Fixes #11
ボタンを整理

--- a/app/views/cards/index.html.slim
+++ b/app/views/cards/index.html.slim
@@ -4,7 +4,7 @@ h1 Cards
 
 #cards
   - @cards.each do |card|
-    == render card
+    = card.title
     .flex.flex-row.p-2
       .p-1
         = link_to t('btn.show'), card, class: "btn btn-primary rounded-md"
@@ -15,4 +15,4 @@ h1 Cards
         .p-1
           = button_to t('btn.destroy'), card, method: :delete, form: { data: { turbo_confirm: t('confirm.destroy') } }, class: "btn btn-warning rounded-md"
 
-= link_to t('btn.new'), new_card_path
+= link_to t('.btn.new'), new_card_path, class: "btn btn-primary rounded-md"
